--- a/css/color2.css
+++ b/css/color2.css
@@ -89,7 +89,7 @@
     -ms-grid-rows: auto 1fr 1fr;
         grid-template-rows: auto 1fr 1fr;
     background: var(--darkColor);
-    color: white;
+    color: rgb(207, 206, 206);
     padding: 1em;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -120,15 +120,15 @@
     max-width: 100%;
   }
   .btn {
-    border: 1px solid var(--lightColor);
+    /* border: 1px solid var(--lightColor); */
     border-radius: 5px;
     background: var(--darckColor);
-    color: var(--lightColor);
-    padding: .5em 2em;
+  /*   color: var(--lightColor); */
+    padding: .2em 1em;
     text-transform: uppercase;
     cursor: pointer;
-    font-size: 14px;
-    border-bottom: 5px solid var(--lightColor);
+    font-size: 15px;
+   /*  border-bottom: 5px solid var(--lightColor); */
   }
   .btn.warning {
     background: var(--warningColor);
