--- a/css/color2.css
+++ b/css/color2.css
@@ -182,17 +182,18 @@
     margin-bottom: 0;
   }
   .myPlaylist .myPlaylist-item {
-    border: 5px dashed pink;
+    /* border: 5px dashed pink; */
+    margin: 10px 10px;
   }
   /*.myPlaylist .myPlaylist-item {
   }
   */
-  .myPlaylist-item:last-child, .myPlaylist-item:nth-of-type(3), .myPlaylist-item:first-child {
+  /* .myPlaylist-item:last-child, .myPlaylist-item:nth-of-type(3), .myPlaylist-item:first-child {
     background: rgb(255, 102, 102);
-  }
-  .myPlaylist-item:not(:last-child):not(:nth-of-type(3)) {
+  } */
+  /* .myPlaylist-item:not(:last-child):not(:nth-of-type(3)) {
     background: rgb(153, 153, 255);
-  }
+  } */
   /*playlistFriends*/
   .playlistFriends {
     padding: 0;
@@ -290,6 +291,7 @@
     height: 180px;
     -o-object-fit: cover;
        object-fit: cover;
+       border-radius: 5px;
   }
   .primaryPlaylistItem-title {
     margin: 5px 0;
@@ -308,33 +310,4 @@
   .sidebarPlaylist {
     overflow: auto;
   }
-  @media screen and (max-width: 767px) {
-    .featuring {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 150px;
-    }
-    .home {
-      height: auto;
-      -ms-grid-columns: 1fr;
-          grid-template-columns: 1fr;
-      -ms-grid-rows: auto auto 150px;
-          grid-template-rows: auto auto 150px;
-          grid-template-areas: "primary"
-                           "sidebar"
-                           "featuring";
-    }
-  }
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  .logo {
-    background-image: url('../images/platzi-video.png');
-  }
-  }
-  @media (-webkit-min-device-pixel-ratio: 3.125), (min-resolution: 300dpi) {
-  .logo {
-    background-image: url('../images/platzi-video.png');
-  }
-  }
-  
+ 
